--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -5,28 +5,51 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3 
+    - uses: actions/checkout@v3
+
     - name: Build Docker Image
       id: docker_build
       run: |
         docker build -t pavangrandhi25/my_redis_git .
-          
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        
+
+    - name: Install semver
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y semver
+
+    - name: Get latest version tag
+      id: get_latest_tag
+      run: |
+        LATEST_TAG=$(curl -s "https://hub.docker.com/v2/repositories/pavangrandhi25/my_redis_git/tags/?page_size=1" | jq -r '.results[0].name // "v0"')
+        echo "::set-output name=latest_tag::${LATEST_TAG}"
+
+    - name: Increment version tag
+      id: increment_tag
+      run: |
+        NEXT_TAG=${{ steps.get_latest_tag.outputs.latest_tag }}
+        if [ "$NEXT_TAG" = "v0" ]; then
+          NEXT_TAG="v1"
+        else
+          NEXT_TAG=$(semver bump patch $NEXT_TAG)
+        fi
+          echo "::set-output name=next_tag::${NEXT_TAG}"
+
     - name: Push Docker Image
       run: |
-        docker tag pavangrandhi25/my_redis_git:latest pavangrandhi25/my_redis_git:${{ github.sha }}
-        docker push pavangrandhi25/my_redis_git:${{ github.sha }}
-      
+        docker tag pavangrandhi25/my_redis_git:latest pavangrandhi25/my_redis_git:${{ steps.increment_tag.outputs.next_tag }}
+        docker push pavangrandhi25/my_redis_git:${{ steps.increment_tag.outputs.next_tag }}
+
     - name: Image Digest
       run: echo ${{ steps.docker_build.outputs.digest }}
