--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Get latest version tag
       id: get_latest_tag
       run: |
-        LATEST_TAG=$(curl -s "https://hub.docker.com/v2/repositories/***/my_redis_git/tags/?page_size=1" | jq -r '.results[0].name // "v0"')
+        LATEST_TAG=$(curl -s "https://hub.docker.com/v2/repositories/pavangrandhi25/my_redis_git/tags/?page_size=1" | jq -r '.results[0].name // "v0"')
         echo "latest_tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
 
     - name: Increment version tag
