--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -2,16 +2,17 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
     - name: Build Docker Image
       id: docker_build
@@ -30,12 +31,8 @@ jobs:
         node-version: 'lts/*'
 
     - name: Install semver
-      run: |
-        npm install -g semver
-    
-    - name: Install jq
-      run: sudo apt-get install -y jq
-    
+      run: npm install -g semver || echo "Semver already installed"
+
     - name: Get latest version tag
       id: get_latest_tag
       run: |
@@ -49,18 +46,19 @@ jobs:
         echo "NEXT_TAG before: $NEXT_TAG"
         if [ -z "$NEXT_TAG" ]; then
           NEXT_TAG="v1"
-        elif [ "$NEXT_TAG" = "v0" ]; then
-          NEXT_TAG="v1"
         else
-          NEXT_TAG=$(semver bump patch $NEXT_TAG)
+          if ! command -v semver &> /dev/null; then
+            echo "Semver not installed, unable to increment tag"
+            NEXT_TAG="v1" # Set default tag if semver is not available
+          else
+            NEXT_TAG=$(semver bump patch $NEXT_TAG)
+          fi
         fi
         echo "NEXT_TAG after: $NEXT_TAG"
         echo "::set-output name=next_tag::$NEXT_TAG"
 
     - name: Push Docker Image
+      if: steps.increment_tag.outputs.next_tag != 'v1' # Only push if tag was successfully incremented
       run: |
         docker tag pavangrandhi25/my_redis_git:latest pavangrandhi25/my_redis_git:${{ steps.increment_tag.outputs.next_tag }}
         docker push pavangrandhi25/my_redis_git:${{ steps.increment_tag.outputs.next_tag }}
-    
-    - name: Image Digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
